samples/_failures_safe/1761176565_b7d6ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3862d66.c: In function ‘pointcloud_add_point’:
./samples/SAFE/__tmp_b3862d66.c:124:7: error: expected ‘;’ at end of input
  124 |     pc
      |       ^
      |       ;
./samples/SAFE/__tmp_b3862d66.c:124:5: error: expected declaration or statement at end of input
  124 |     pc
      |     ^~
